lighter and more consistent border colors, fix one spacing issue

--- a/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
+++ b/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
@@ -40,7 +40,7 @@ table.dataTable tr td .sites_autocomplete a {
   position: relative;
   z-index: 19;
   background: @theme-color-background-base url(plugins/Morpheus/images/sites_selection.png) repeat-x 0 0;
-  border: 1px solid #d4d4d4;
+  border: 1px solid @color-silver-l85;
   color: #255792;
   border-radius: 4px;
   cursor: pointer;
