--- a/plugins/Morpheus/stylesheets/general/_form.less
+++ b/plugins/Morpheus/stylesheets/general/_form.less
@@ -68,6 +68,14 @@ table.entityTable {
       }
     }
   }
+
+  tr {
+    td {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 10px;
+    }
+  }
 }
 
 .entityTable tr td.first, .entityTable tr th.first {
