--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -101,8 +101,8 @@ table.entityTable tr td a:hover {
     }
 
     .Menu--dashboard {
-        border-top: 1px solid @color-silver-l80;
-        border-bottom: 1px solid @color-silver-l80;
+        border-top: 1px solid @theme-color-background-lowContrast;
+        border-bottom: 1px solid @theme-color-background-lowContrast;
         > .Menu-tabList {
             margin: 0;
             a {
@@ -113,7 +113,7 @@ table.entityTable tr td a:hover {
                 .border-radius(0px);
                 border: 0;
                 background: none;
-                border-right: 1px solid @color-silver-l80;
+                border-right: 1px solid @theme-color-background-lowContrast;
                 margin-bottom: -1px;
                 border-bottom: 1px solid #ccc;
 
@@ -550,7 +550,7 @@ table.dataTable .dataTableRowActions {
 
 .dataTableFooterIcons {
   padding: 6px 8px 0px;
-  border-top: 1px solid @color-silver-l80;
+  border-top: 1px solid @color-silver-l90;
 }
 
 div.sparkline {
