--- a/plugins/Morpheus/stylesheets/ui/_components.less
+++ b/plugins/Morpheus/stylesheets/ui/_components.less
@@ -207,7 +207,7 @@
 }
 
 #header_message {
-    border: 1px solid @color-silver-l80;
+    border: 1px solid @theme-color-background-lowContrast;
     padding: 8px 10px 8px 10px;
     height: auto;
     background: @theme-color-background-base;
